--- a/index.html
+++ b/index.html
@@ -43,20 +43,22 @@
     <div class="container" data-aos="fade-up">
 
       <div class="hero-img" data-aos="zoom-out" data-aos-delay="200">
+<!--<div class="row">-->
+         <!-- <img src="assets/img/rishi.jpg" alt="" class="img-fluid"  style="width: 43.5%; height: 43.5%;"><div class="br1"><br></div>-->
+		<!--<img src="assets/img/kunal.jpeg" alt="" class="img-fluid" style="width: 40%; height: 40%;">-->
+
+<!--</div>-->
 <div class="row">
   
-		<img src="assets/img/kunal.jpeg" alt="" class="img-fluid" style="width: 40%; height: 40%;">
-        <img src="assets/img/rishi.jpg" alt="" class="img-fluid"  style="width: 43.5%; height: 43.5%;">
-</div>
-<div class="row">
   <div class="col">
-    <p style="color:white;"><b>Advocate Kishore Kunal <br>Mob no - 7421901899</b></p>
-    <p style="color:white; line-height: 0%;"><b></b></p>
-  </div>
-  <div class="col" style="margin-left: -20%;">
+<img src="assets/img/rishi.jpg" alt="" class="img-fluid">
     <p style="color:white;"><b>Er. Rishi Sinha<br>Advocate Rishi Sinha<br>Mob no - 9234055917</b></p>
-    <p style="color:white;"><b></b></p>
-  <p style="color:white;"><b></b></p>
+    
+  </div><div class="br"><br></div>
+<div class="col">
+<img src="assets/img/kunal.jpeg" alt="" class="img-fluid">
+    <p style="color:white;"><b>Advocate Kishore Kunal <br>Mob no - 7421901899</b></p>
+
   </div>
   <!-- <h3 style="color:white;"><b>Contact : </b></h3> -->
 </div>
