--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <img src="assets/img/rishi.jpg" alt="" class="img-fluid" style="width:75%;">
     <p style="color:white;"><b>Er. Rishi Sinha<br>Advocate Rishi Sinha<br>Mob no - 9234055917</b></p>
     
-  </div><div class="br"><br></div>
+  </div>
 <div class="col">
 <img src="assets/img/kunal.jpeg" alt="" class="img-fluid" style="width:75%;">
     <p style="color:white;"><b>Advocate Kishore Kunal <br>Mob no - 7421901899</b></p>
